--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Innova</a>
+      <a class="navbar-brand page-scroll" href="#page-top">AOWS REAL ESTATE</a>
       <div class="phone"><span>Call Today</span>320-123-4321</div>
     </div>
     
